장소 하나를 랜덤으로 정하고, 그 장소를 중심으로 가까운 장소 15개 조회하는 방식으로 변경